--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.14",
+    "sass": "^1.30.0",
     "typescript": "^4.1.3"
   }
 }
