--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
       "ES2020",
       "DOM"
     ],
-    "sourceMap": true
+    "sourceMap": true,
+    "rootDir": "src"
   },
+  "compileOnSave": true,
   "exclude": [
     "node_modules"
   ]
