--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ services:
 before_install:
   - npm install
   - npx tsc
-  - docker build -t docker.pkg.github.com/nils-witt/s-plan_pwa/s-plan_pwa:"$DOCKER_TAG" .
-  - docker tag docker.pkg.github.com/nils-witt/s-plan_pwa/s-plan_pwa:"$DOCKER_TAG" docker.pkg.github.com/nils-witt/s-plan_pwa/s-plan_pwa:"$TRAVIS_COMMIT"
-  - echo "$GITHUB_KEY" | docker login https://docker.pkg.github.com -u "$GITHUB_USER" --password-stdin
-  - docker push docker.pkg.github.com/nils-witt/s-plan_pwa/s-plan_pwa
+  - docker build -t ghcr.io/nils-witt/s-plan_pwa:"$DOCKER_TAG" .
+  - docker tag ghcr.io/nils-witt/s-plan_pwa:"$DOCKER_TAG" ghcr.io/nils-witt/s-plan_pwa:"$TRAVIS_COMMIT"
+  - echo "$GITHUB_KEY" | docker login ghcr.io -u "$GITHUB_USER" --password-stdin
+  - docker push ghcr.io/nils-witt/s-plan_pwa
 
 script:
   - docker ps
