--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.25",
+    "node-sass": "^5.0.0",
     "sass": "^1.32.6",
     "typescript": "^4.1.3"
   }
