--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - npm install
   - npx tsc
   - npx node-sass --recursive ./src --output ./src
+  - ./cleanRelease.sh
   - docker build -t ghcr.io/nils-witt/s-plan_pwa:"$DOCKER_TAG" .
   - docker tag ghcr.io/nils-witt/s-plan_pwa:"$DOCKER_TAG" ghcr.io/nils-witt/s-plan_pwa:"$TRAVIS_COMMIT"
   - echo "$GITHUB_KEY" | docker login ghcr.io -u "$GITHUB_USER" --password-stdin
