--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "ES2020",
       "DOM"
     ],
-    "sourceMap": false,
+    "sourceMap": true,
     "rootDir": "src"
   },
   "compileOnSave": true,
